# nixm

./: MANUAL.rst  README.rst  pyproject.toml  setup.py
files/: MANUAL.rst
mods/: __init__.py  cmd.py  err.py  fnd.py  irc.py  log.py  opm.py  rss.py  srv.py  tdo.py  thr.py  upt.py
nixm/: __init__.py  __main__.py  admin.py  cli.py  client.py  clients.py  cmd.py  command.py  console.py  control.py  daemon.py  default.py  err.py  fnd.py  irc.py  log.py  lookups.py  main.py  mdl.py  names.py  object.py  objects.py  opm.py  persist.py  rss.py  runtime.py  service.py  statics.py  tdo.py  thr.py
nixm/modules/: ask.py  cmd.py  dbg.py  err.py  face.py  flt.py  fnd.py  irc.py  log.py  mbx.py  mdl.py  mod.py  opm.py  req.py  rss.py  rst.py  slg.py  srv.py  tdo.py  thr.py  tmr.py  udp.py  upt.py
nixt/: object.py  persist.py  runtime.py
tests/: test_composite.py  test_interface.py  test_json.py  test_mixin.py  test_object.py
