# This file is placed in the Public Domain.

[build-system]
requires = [
    'setuptools>=43.0.0',
    'wheel'
]
build-backend = 'setuptools.build_meta'

[project]
name = 'nixm'
version = '11'
authors = [
    {name = 'Bart Thate', email = 'record11719@gmail.com' },
]
description = 'Nix Em'
readme = 'README.rst'
license = { text='Public Domain'}
classifiers=[
    'Development Status :: 4 - Beta',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Topic :: Utilities'
]


[project.scripts]
'nixm'  = 'nixm.bin.cli:wrapped'
'nixma' = 'nixm.bin.admin:wrapped'
'nixmc' = 'nixm.bin.console:wrapped'
'nixmd' = 'nixm.bin.daemon:main'
'nixms' = 'nixm.bin.service:wrapped'


[project.urls]
'home'   = 'https://pypi.org/project/nixm'
'bugs'   = 'https://github.com/otpcr/nixm/issues'
'source' = 'https://github.com/otpcr/nixm'

[tool.setuptools]
packages = [
    'nixt',
    'nixm.bin',
    'nixm.modules'
]


[tool.setuptools.data-files]
"nixm/docs" = [
    'README.rst',
]
"nixm/docs" = [
    'docs/about.rst',
    'docs/googlea6568bcc05c8d50b.html',
    'docs/ack.png',
    'docs/ack3.png',
    'docs/bevestigd.jpg',
    'docs/bylaw.png',
    'docs/conf.py',
    'docs/ECHAabilify.png',
    'docs/ECHAclozapine.png',
    'docs/ECHAhaldol.png',
    'docs/ECHAzyprexa.png',
    'docs/evidence.rst',
    'docs/genocide.jpg',
    'docs/genocide.png',
    'docs/genocideblack.png',
    'docs/guilty.rst',
    'docs/index.rst',
    'docs/informed.jpg',
    'docs/kamer2.png',
    'docs/manual.rst',
    'docs/OTP111.png',
    'docs/OTP222.png',
    'docs/reconsider.rst',
    'docs/robots.txt',
    'docs/since.png',
    'docs/skull3.png',
    'docs/verbatim7.png',
    'docs/writings.rst'
]
"nixm/docs/files" = [
    'docs/files/sitemap.xml',
    'docs/files/genocide.png'
]
"nixm/docs/_static" = [
    'docs/_static/otpcr.css',
]
"nixm/docs/pdf" =  [
    'docs/pdf/bevestigd.pdf',
    'docs/pdf/EM_Ack_OTP-CR-117_19.pdf',
    'docs/pdf/EM_T04_OTP-CR-117_19.pdf',
    'docs/pdf/EM_T07_OTP-CR-117_19_001.pdf',
    'docs/pdf/Kamer.pdf'
]
"nixm/docs/_templates" = [
    'docs/_templates/base.rst',
    'docs/_templates/class.rst',
    'docs/_templates/mine.rst',
    'docs/_templates/module.rst'
]
