# This file is placed in the Public Domain.

[build-system]
requires = [
    'setuptools>=43.0.0',
    'wheel'
]
build-backend = 'setuptools.build_meta'

[project]
name = 'nixm'
version = '30'
authors = [
    {name = 'Bart Thate', email = 'record11719@gmail.com' },
]
description = 'Nix Em'
readme = 'README.rst'
license = { text='Public Domain'}
classifiers=[
    'Development Status :: 4 - Beta',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Topic :: Utilities'
]


[project.scripts]
'nixm'  = 'nixm.bin.cli:wrapped'
'nixma' = 'nixm.bin.admin:wrapped'
'nixmc' = 'nixm.bin.console:wrapped'
'nixmd' = 'nixm.bin.daemon:main'
'nixms' = 'nixm.bin.service:wrapped'


[project.urls]
'home'   = 'https://pypi.org/project/nixm'
'bugs'   = 'https://github.com/otpcr/nixm/issues'
'source' = 'https://github.com/otpcr/nixm'

[tool.setuptools]
packages = [
    'nixm',
    'nixm.bin',
    'nixm.modules'
]
