# This file is placed in the Public Domain.
 
[build-system]
requires = [
    'setuptools>=43.0.0',
    'wheel'
]
build-backend = 'setuptools.build_meta'


[project]
name = 'nixm'
version = "50"
authors = [
    {name = 'Bart Thate', email = 'bthate@dds.nl' },
]
readme = "README.rst"
description = 'NIXM'
license = { text='Public Domain'}
classifiers=[
    'Development Status :: 4 - Beta',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Topic :: Utilities'
]


[project.scripts]
'nixm'    = 'nixm.__main__:wrapped'
'nixmd'   = 'nixm.daemon:wrapped'
'nixms'   = 'nixm.service:wrapped'


[project.urls]
'home'   = 'https://pypi.org/project/nixm'
'bugs'   = 'https://github.com/otpcr/nixm/issues'
'source' = 'https://github.com/otpcr/nixm'


[tool.setuptools]
packages = [
    'nixm',
    'nixm.modules'
]


[tool.setuptools.data-files]
"share/doc/nixm" = [
    'README.rst',
    'files/MANUAL.rst'
]
